--- a/styles/elya.css
+++ b/styles/elya.css
@@ -31,8 +31,6 @@ body {
         radial-gradient(ellipse at 85% 90%, rgba(86, 82, 12, 0.15) 0%, rgba(70, 78, 0, 0.05) 15%, transparent 90%),
         radial-gradient(circle at 5% 5%, rgba(5, 30, 52, 0.18) 0%, transparent 40%);
     position: relative;
-    overflow-x: hidden;
-    
     background-blend-mode: screen;
 }
 
@@ -586,6 +584,10 @@ footer {
 
 /* Responsive */
 @media (max-width: 768px) {
+    body{
+        overflow-x: hidden;
+    }
+    
     .nav-links {
         display: none;
     }
