--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,6 @@ body {
         radial-gradient(ellipse at 85% 90%, rgba(86, 82, 12, 0.15) 0%, rgba(70, 78, 0, 0.05) 15%, transparent 90%),
         radial-gradient(circle at 5% 5%, rgba(5, 30, 52, 0.18) 0%, transparent 40%);
     position: relative;
-    overflow-x: hidden;
-    width: 100%;
-    min-height: 100vh;
     background-blend-mode: screen;
 }
 
@@ -677,7 +674,11 @@ footer {
 /* =================
    RESPONSIVE BASE
    ================= */
-@media (max-width: 768px) {
+@media (max-width: 768px) {    
+    body{
+        overflow-x: hidden;
+    }
+    
     .nav-right {
         display: none;
     }
